[package]
name = "financial_data_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
time = "0.3"                    # For date and time handling
tokio = { version = "1", features = ["full"] }  # For asynchronous runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yahoo_finance_api = "2.3.0" 

[dev-dependencies]
tokio-test = "0.4.4" 
